Refactored codebase to improve code quality and readability. Changes include addition of comments for better code understanding, use of Lombok annotations for reducing boilerplate code, improvements in testing methods and exception handling, and cleaning up of some unused imports and methods.