@@ -3,22 +3,22 @@ package com.ayubyusuf.cloudvendorapi.repository;
 import com.ayubyusuf.cloudvendorapi.model.CloudVendor;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 
 import java.util.List;
 
-import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
+import static org.assertj.core.api.Assertions.assertThat;
 
 @DataJpaTest
 public class CloudVendorRepositoryTest {
 
-    //  given - when - then
-
-    CloudVendor cloudVendor;
     @Autowired
     private CloudVendorRepository cloudVendorRepository;
+
+    private CloudVendor cloudVendor;
 
     @BeforeEach
     void setUp() {
@@ -28,23 +28,22 @@ public class CloudVendorRepositoryTest {
 
     @AfterEach
     void tearDown() {
-        cloudVendor = null;
         cloudVendorRepository.deleteAll();
     }
 
-    // Test case SUCCESS
-
     @Test
-    void testFindByVendorName_Found() {
-        List<CloudVendor> cloudVendorList = cloudVendorRepository.findByVendorName("Amazon");
-        assertThat(cloudVendorList.get(0).getVendorId()).isEqualTo(cloudVendor.getVendorId());
-        assertThat(cloudVendorList.get(0).getVendorAddress()).isEqualTo(cloudVendor.getVendorAddress());
+    @DisplayName("Find CloudVendor by Name - Success Case")
+    void shouldFindCloudVendorByNameWhenVendorExists() {
+        List<CloudVendor> foundVendors = cloudVendorRepository.findByVendorName("Amazon");
+        assertThat(foundVendors).isNotEmpty();
+        assertThat(foundVendors.getFirst().getVendorId()).isEqualTo(cloudVendor.getVendorId());
+        assertThat(foundVendors.getFirst().getVendorAddress()).isEqualTo(cloudVendor.getVendorAddress());
     }
 
-    // Test case FAILURE
     @Test
-    void testFindByVendorName_NotFound() {
-        List<CloudVendor> cloudVendorList = cloudVendorRepository.findByVendorName("GCP");
-        assertThat(cloudVendorList.isEmpty()).isTrue();
+    @DisplayName("Find CloudVendor by Name - Failure Case")
+    void shouldNotFindCloudVendorByNameWhenVendorDoesNotExist() {
+        List<CloudVendor> foundVendors = cloudVendorRepository.findByVendorName("GCP");
+        assertThat(foundVendors).isEmpty();
     }
 }
